--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,44 @@
-theme: jekyll-theme-hacker
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: 倾旋的博客
+email: payloads@aliyun.com
+description: > # this means to ignore newlines until "baseurl:"
+  岁月静好，现世安稳。
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://payloads.online" # the base hostname & protocol for your site
+description: >
+  One or more sentences introducing this blog.
+author: 倾旋
+avatar: /images/head.jpeg
+# Build settings
+paginate: 20
+paginate_path: "page:num"
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+permalink: /archivers/:title
+excerpt_separator: "<!--more-->"
+gems:
+ - jekyll-paginate
+ - jekyll-gist
+ - jemoji
+
+prose:
+  rooturl: ''
+  siteurl: 'http://rvn0xsy.github.io/'
+  relativeLinks: 'http://rvn0xsy.github.io/'
+  media: 'images'
+#  ignore:
+#    - index.md
+#    - _config.yml
+#    - /_layouts
+#    - /_includes
+
