--- a/_config.yml
+++ b/_config.yml
@@ -8,37 +8,16 @@
 # Site settings
 title: 倾旋的博客
 email: payloads@aliyun.com
-description: > # this means to ignore newlines until "baseurl:"
-  岁月静好，现世安稳。
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://payloads.online" # the base hostname & protocol for your site
-description: >
-  One or more sentences introducing this blog.
-author: 倾旋
-avatar: /images/head.jpeg
-# Build settings
-paginate: 20
-paginate_path: "page:num"
-highlighter: rouge
-markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-permalink: /archivers/:title
+
+#write html inside the double quotes to display in jumbotron
+description: "<h1 style='color:white;'>倾旋的博客</h1><h3>岁月静好，现世安稳。</h3>"
 excerpt_separator: "<!--more-->"
-gems:
- - jekyll-paginate
- - jekyll-gist
- - jemoji
 
-prose:
-  rooturl: ''
-  siteurl: 'http://rvn0xsy.github.io/'
-  relativeLinks: 'http://rvn0xsy.github.io/'
-  media: 'images'
-#  ignore:
-#    - index.md
-#    - _config.yml
-#    - /_layouts
-#    - /_includes
+paginate: 10
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://rvn0xsy.github.io" # the base hostname & protocol for your site
+twitter_username: Rvn0xsy
+github_username:  Rvn0xsy
 
+# Build settings
+markdown: kramdown
