--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: 倾旋的博客
 email: payloads@aliyun.com
-
+author: 倾旋
 #write html inside the double quotes to display in jumbotron
 description: "<h1 style='color:white;'>倾旋的博客</h1><h3>岁月静好，现世安稳。</h3>"
 excerpt_separator: "<!--more-->"
