--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: >
 #email: payloads@aliyun.com
 author: 倾旋
 avatar: "/images/timg.jpeg"
-profile: 岁月静好，现世安稳。
+profile: 安全从业者，爱好安全产品开发，渗透测试，Web漏洞研究
 #twitter_username: twitter_username
 github_username:  rvn0xsy
 profile_links:
